First item now shows highlighted on page load, fixed overlapping blob issue on sidebar

--- a/src/Components/StreamersList/StreamersList.scss
+++ b/src/Components/StreamersList/StreamersList.scss
@@ -18,6 +18,7 @@ $-blue-theme: #B8CDF8;
   direction: rtl;
   backdrop-filter: blur(10px);  
   background: #ffffff50;  
+  z-index: 20;
 }
 
 #streamer-sidebar-component::-webkit-scrollbar-thumb {
